parser/sample_tests/ours/inheritance.txt

*** Error line 1.
class Animal {
^^^^^
*** syntax error

